# 2d-mouse-brain-identification

./: .gitignore  README.md  pyproject.toml
mbi/: evaluate.py  predict.py
mbi/data_loader/: base_data_loader.py  data_loader.py
mbi/models/: base_model.py  efficient_net.py  resnet50.py  simple_cnn.py
mbi/trainers/: base_trainer.py  train.py
mbi/utils/: metrics.py  preprocess.py  visualization.py
trainers/: train.py
