[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mbi"
version = "1.0.0"
requires-python = ">=3.8"
dependencies = [
    "tensorflow",
    "tensorflow-addons",
    "numpy",
    "scikit-image",
    "matplotlib",
    "imgaug",
    "Pillow",
    "tqdm"
]

[tool.setuptools.packages.find]
where = ["."]
namespaces = false

[project.scripts]
train = "mbi.trainers.train:main"
evaluate = "mbi.evaluate:main"
predict = "mbi.predict:main"
